# Snow-Shovel-Website

./: README.md
backend/: db.sqlite3
backend/mysite/: settings.py  urls.py
customer_service/: README.md  pyproject.toml
customer_service/src/customer_service/: crew.py  main.py
