[project]
name = "customer_service"
version = "0.1.0"
description = "customer_service using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
customer_service = "customer_service.main:run"
run_crew = "customer_service.main:run"
train = "customer_service.main:train"
replay = "customer_service.main:replay"
test = "customer_service.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
